--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     }
     #hero {
       background: url(images/hero-bg.jpg) top left no-repeat;
+      background-size: cover;
 
     }
     .hero-content {
