--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
     </div>
   </script>
 
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js"></script>
-  <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script type="text/javascript" src="js/repos.js"></script>
 
 </head>
